c2prj1_cards/grade.txt
Grading at Thu Dec 24 16:23:46 UTC 2020
Compiling cards.c
cards.c: In function ‘main’:
cards.c:96:3: error: too few arguments to function ‘print_card’
   print_card();
   ^
cards.c:58:6: note: declared here
 void print_card(card_t c) {
      ^
Could not compile your card.c!

Overall Grade: FAILED
